Consulta condicional con Entity Framework Core

--- a/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios.Api.Autor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConexionDatabase": ""
+    "ConexionDatabase": "Server=127.0.0.1;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=Fabian$2008"
   },
   "Logging": {
     "LogLevel": {
