Crear Clase Consulta Registros

--- a/TiendaServicios.Api.Libro/appsettings.json
+++ b/TiendaServicios.Api.Libro/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexionDB": " Data Source=localhost\\SQLSERVER2021;Initial Catalog=tiendalibro; Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
